Fix perpetualLicense validation Fix translations Improve validation logic

--- a/tool/src/java/org/sakaiproject/s2u/copyright/bundle/CopyrightChecker_ca.properties
+++ b/tool/src/java/org/sakaiproject/s2u/copyright/bundle/CopyrightChecker_ca.properties
@@ -105,4 +105,7 @@ placeholder.search=Cerca...
 process.selected.files=Tramitar fitxers seleccionats com
 
 #MANAGE PANEL VALIDATIONS
-identification.required=El camp d'identificaci\u00f3 \u00e9s obligatori
+validation.identification=El camp d'identificaci\u00f3 \u00e9s obligatori
+validation.licenseEnd=El camp Data de finalitzaci\u00f3 de llic\u00e8ncia no pot ser una data del passat
+validation.licenseEnd.null=El camp Data de finalitzaci\u00f3 de llic\u00e8ncia \u00e9s obligatori
+validation.licenseEnd.format=El format del camp Data de finalitzaci\u00f3 de llic\u00e8ncia \u00e9s erroni
