--- a/tool/src/java/org/sakaiproject/s2u/copyright/bundle/CopyrightChecker_es.properties
+++ b/tool/src/java/org/sakaiproject/s2u/copyright/bundle/CopyrightChecker_es.properties
@@ -105,4 +105,7 @@ placeholder.search=Buscar...
 process.selected.files=Tramitar ficheros seleccionados como
 
 #MANAGE PANEL VALIDATIONS
-identification.required=El campo identificaci\u00f3n es obligatorio
+validation.identification=El campo identificaci\u00f3n es obligatorio
+validation.licenseEnd=El campo Fecha de fin de licencia no puede ser una fecha del pasado
+validation.licenseEnd.null=El campo Fecha de fin de licencia es obligatorio
+validation.licenseEnd.format=El formato del campo Fecha de fin de licencia es err\u00f3neo
