--- a/tool/src/java/org/sakaiproject/s2u/copyright/bundle/CopyrightChecker_eu.properties
+++ b/tool/src/java/org/sakaiproject/s2u/copyright/bundle/CopyrightChecker_eu.properties
@@ -105,4 +105,7 @@ placeholder.search=Bilatu...
 process.selected.files=Prozesatu hautatutako fitxategiak gisa
 
 #MANAGE PANEL VALIDATIONS
-identification.required=Identifikazio eremua derrigorrezkoa da
+validation.identification=Alor identifikazioa nahitaezkoa da
+validation.licenseEnd=Data lizentzia-amaierako alorra ezin da iraganaren data izan
+validation.licenseEnd.null=Data lizentzia-amaierako alorra nahitaezkoa da
+validation.licenseEnd.format=Okerra da Data lizentzia-amaierako alorraren formatua
