Show a different popup message when a file is hidden

--- a/impl/src/java/org/sakaiproject/s2u/copyright/bundle/messages_ca.properties
+++ b/impl/src/java/org/sakaiproject/s2u/copyright/bundle/messages_ca.properties
@@ -1,5 +1,6 @@
 #PA SYSTEM MESSAGES
 ip.popup.content=Visiti la seva \u00e0rea de treball i declari l'estat de propietat intel\u00b7lectual d'aquests elements, els arxius poden estar ocults despr\u00e9s de {0} dies.
+ip.popup.content.hidden=Alguns dels fitxers pujats s'han ocultat i ja no estan disponibles per als estudiants. Visiti la seva \u00e0rea de treball i declari l'estat de propietat intel\u00b7lectual dels elements pendents, els arxius poden estar ocults despr\u00e9s de {0} dies.
 ip.popup.title=Tens elements pendents en l'eina de propietat intel\u00b7lectual.
 
 #EMAIL NOTIFICATIONS
