--- a/impl/src/java/org/sakaiproject/s2u/copyright/bundle/messages_es.properties
+++ b/impl/src/java/org/sakaiproject/s2u/copyright/bundle/messages_es.properties
@@ -1,5 +1,6 @@
 #PA SYSTEM MESSAGES
 ip.popup.content=Visite su \u00e1rea de trabajo y declare el estado de propiedad intelectual de estos elementos, los archivos pueden estar ocultos despu\u00e9s de {0} d\u00edas.
+ip.popup.content.hidden=Algunos de los ficheros subidos se han ocultado y ya no est\u00e1n visibles a los estudiantes. Visite su \u00e1rea de trabajo y declare el estado de propiedad intelectual de los elementos pendientes, los archivos pueden estar ocultos despu\u00e9s de {0} d\u00edas.
 ip.popup.title=Tienes elementos pendientes en la herramienta de propiedad intelectual.
 
 #EMAIL NOTIFICATIONS
