--- a/impl/src/java/org/sakaiproject/s2u/copyright/bundle/messages_eu.properties
+++ b/impl/src/java/org/sakaiproject/s2u/copyright/bundle/messages_eu.properties
@@ -1,5 +1,6 @@
 #PA SYSTEM MESSAGES
 ip.popup.content=Bere lan-eremua bisita dezan eta elementu hauen jabetza intelektualeko egoera deklara dezan, artxiboak ezkutu egon daitezke gero {0} egunak.
+ip.popup.content.hidden=Kargatutako fitxategietako batzuk ezkutatu egin dira eta ez daude ikasleentzat. Bisitatu zure laneko eremua eta ageri diren elementuen jabetza intelektualaren egoera azaltzeko, fitxategi batzuk ezkutatu egin daitezke {0} egunen buruan.
 ip.popup.title=Elementu pendienteak dituzu jabetza intelektual-erremintan.
 
 #EMAIL NOTIFICATIONS
