--- a/impl/src/java/org/sakaiproject/s2u/copyright/bundle/messages.properties
+++ b/impl/src/java/org/sakaiproject/s2u/copyright/bundle/messages.properties
@@ -1,5 +1,6 @@
 #PA SYSTEM MESSAGES
 ip.popup.content=Please visit your workspace and declare the intellectual property status of that items, the files may be hidden after {0} days.
+ip.popup.content.hidden=Some of the uploaded files have been hidden and are not available to students anymore. Please visit your workspace and declare the intellectual property status of the pending items, some files may be hidden after {0} days.
 ip.popup.title=You have pending items in your intellectual property tool
 
 #EMAIL NOTIFICATIONS
