Remove the popup duration and fix configuration

--- a/impl/src/java/org/sakaiproject/s2u/copyright/bundle/messages.properties
+++ b/impl/src/java/org/sakaiproject/s2u/copyright/bundle/messages.properties
@@ -1,10 +1,10 @@
 #PA SYSTEM MESSAGES
-ip.popup.content=Please visit your workspace and declare the intellectual property status of that items, the files may be hidden after {0} days.
-ip.popup.content.hidden=Some of the uploaded files have been hidden and are not available to students anymore. Please visit your workspace and declare the intellectual property status of the pending items, some files may be hidden after {0} days.
+ip.popup.content=Please visit your workspace and declare the intellectual property status of that items, the files may be hidden after {0} hours.
+ip.popup.content.hidden=Some of the uploaded files have been hidden and are not available to students anymore. Please visit your workspace and declare the intellectual property status of the pending items, some files may be hidden after {0} hours.
 ip.popup.title=You have pending items in your intellectual property tool
 
 #EMAIL NOTIFICATIONS
 ip.notification.mail.subject=You have pending items in your intellectual property tool
-ip.notification.mail.content=Please visit your workspace and declare the intellectual property status of that items, the files may be hidden after {0} days.
+ip.notification.mail.content=Please visit your workspace and declare the intellectual property status of that items, the files may be hidden after {0} hours.
 ip.support.mail.subject=New intellectual property query from {0}
 ip.support.mail.content=You have a new intellectual property query from {0}({1}), query details:\n\n<ul><li>Site: {2}</li><li>File title: {3}</li><li>File url: {4}</li></ul>\n\nQuery contents:\n\n--------------\n\n{5}\n\n--------------\n\nPlease don't reply to this message directly.
