Add the workspace link in the notifications. Refactor translations

--- a/impl/src/java/org/sakaiproject/s2u/copyright/bundle/messages_ca.properties
+++ b/impl/src/java/org/sakaiproject/s2u/copyright/bundle/messages_ca.properties
@@ -1,10 +1,10 @@
-#PA SYSTEM MESSAGES
-ip.popup.content=Visiti la seva \u00e0rea de treball i declari l'estat de propietat intel\u00b7lectual d'aquests elements, els arxius poden estar ocults despr\u00e9s de {0} hores.
-ip.popup.content.hidden=Alguns dels fitxers pujats s'han ocultat i ja no estan disponibles per als estudiants. Visiti la seva \u00e0rea de treball i declari l'estat de propietat intel\u00b7lectual dels elements pendents, els arxius poden estar ocults despr\u00e9s de {0} hores.
-ip.popup.title=Tens elements pendents en l'eina de propietat intel\u00b7lectual.
+#User notifications
+notification.content=Per favor declara l'estat de propietat intel\u00b7lectual d'aquests elements, els arxius poden estar ocults despr\u00e9s de {0} hores.\n
+notification.content.hidden=Alguns dels fitxers pujats s'han ocultat i ja no estan disponibles per als estudiants.\n
+notification.subject=Tens elements pendents en l'eina de propietat intel\u00b7lectual.
+notification.tool.link.missing=Per favor contacta amb l'administrador del sistema per declarar l'estat dels fitxers.
+notification.tool.link=Visita la <a href="{0}" target="_blank">seva \u00e0rea de treball/a> per declarar l'estat.
 
-#EMAIL NOTIFICATIONS
-ip.notification.mail.subject=Tens elements pendents en l'eina de propietat intel\u00b7lectual.
-ip.notification.mail.content=Visiti la seva \u00e0rea de treball i declari l'estat de la propietat intel\u00b7lectual d'aquests elements, els arxius poden estar ocults despr\u00e9s de {0} hores.
-ip.support.mail.subject=Nova consulta de propietat intel\u00b7lectual de {0}
-ip.support.mail.content=T\u00e9 una nova consulta de propietat intel\u00b7lectual de {0} ({1}), detalls de la consulta: \n\n<ul><li>Lloc: {2} </li><li>T\u00edtol de l'arxiu: {3}</li><li>URL de l'arxiu: {4}</li></ul>\n\nContinguts de la pregunta:\n\n-------------- \n\n{5}\n\n-------------- \n\nPer favor, no respongui directament a aquest missatge.
+#Support notifications
+support.mail.content=T\u00e9 una nova consulta de propietat intel\u00b7lectual de {0} ({1}), detalls de la consulta: \n\n<ul><li>Lloc: {2} </li><li>T\u00edtol de l'arxiu: {3}</li><li>URL de l'arxiu: {4}</li></ul>\n\nContinguts de la pregunta:\n\n-------------- \n\n{5}\n\n-------------- \n\nPer favor, no respongui directament a aquest missatge.
+support.mail.subject=Nova consulta de propietat intel\u00b7lectual de {0}
