--- a/impl/src/java/org/sakaiproject/s2u/copyright/bundle/messages_es.properties
+++ b/impl/src/java/org/sakaiproject/s2u/copyright/bundle/messages_es.properties
@@ -1,10 +1,10 @@
-#PA SYSTEM MESSAGES
-ip.popup.content=Visite su \u00e1rea de trabajo y declare el estado de propiedad intelectual de estos elementos, los archivos pueden estar ocultos despu\u00e9s de {0} horas.
-ip.popup.content.hidden=Algunos de los ficheros subidos se han ocultado y ya no est\u00e1n visibles a los estudiantes. Visite su \u00e1rea de trabajo y declare el estado de propiedad intelectual de los elementos pendientes, los archivos pueden estar ocultos despu\u00e9s de {0} horas.
-ip.popup.title=Tienes elementos pendientes en la herramienta de propiedad intelectual.
+#User notifications
+notification.content=Por favor declare el estado de propiedad intelectual de estos elementos, los archivos pueden estar ocultos despu\u00e9s de {0} horas.\n
+notification.content.hidden=Algunos de los ficheros subidos se han ocultado y ya no est\u00e1n visibles a los estudiantes.\n
+notification.subject=Tienes elementos pendientes en la herramienta de propiedad intelectual.
+notification.tool.link.missing=Por favor contacta con el administrador del sistema para declarar el estado de esos ficheros.
+notification.tool.link=Por favor visita <a href="{0}" target="_blank">tu espacio de trabajo</a> para declarar el estado.
 
-#EMAIL NOTIFICATIONS
-ip.notification.mail.subject=Tienes elementos pendientes en la herramienta de propiedad intelectual.
-ip.notification.mail.content=Visite su \u00e1rea de trabajo y declare el estado de la propiedad intelectual de esos elementos, los archivos pueden estar ocultos despu\u00e9s de {0} horas.
-ip.support.mail.subject=Nueva consulta de propiedad intelectual desde {0}
-ip.support.mail.content=Tiene una nueva consulta de propiedad intelectual de {0} ({1}), detalles de la consulta: \n\n<ul><li>Sitio: {2} </li><li>T\u00edtulo del archivo: {3}</li><li>URL del archivo: {4}</li></ul>\n\nContenidos de la pregunta:\n\n -------------- \n\n{5}\n\n -------------- \n\nPor favor, no responda directamente a este mensaje.
+#Support notifications
+support.mail.content=Tiene una nueva consulta de propiedad intelectual de {0} ({1}), detalles de la consulta: \n\n<ul><li>Sitio: {2} </li><li>T\u00edtulo del archivo: {3}</li><li>URL del archivo: {4}</li></ul>\n\nContenidos de la pregunta:\n\n -------------- \n\n{5}\n\n -------------- \n\nPor favor, no responda directamente a este mensaje.
+support.mail.subject=Nueva consulta de propiedad intelectual desde {0}
