--- a/impl/src/java/org/sakaiproject/s2u/copyright/bundle/messages_eu.properties
+++ b/impl/src/java/org/sakaiproject/s2u/copyright/bundle/messages_eu.properties
@@ -1,10 +1,11 @@
-#PA SYSTEM MESSAGES
-ip.popup.content=Bere lan-eremua bisita dezan eta elementu hauen jabetza intelektualeko egoera deklara dezan, artxiboak ezkutu egon daitezke gero {0} ordu.
-ip.popup.content.hidden=Kargatutako fitxategietako batzuk ezkutatu egin dira eta ez daude ikasleentzat. Bisitatu zure laneko eremua eta ageri diren elementuen jabetza intelektualaren egoera azaltzeko, fitxategi batzuk ezkutatu egin daitezke {0} ordu.
-ip.popup.title=Elementu pendienteak dituzu jabetza intelektual-erremintan.
+#User notifications
+notification.content=Aipatu elementu horien jabetza intelektualaren egoera, fitxategiak ezkutatu egin daitezke {0} ordu igaro ondoren.\n
+notification.content.hidden=Kargatutako fitxategietako batzuk ezkutatu egin dira eta ez daude ikasleentzat.\n
+notification.subject=Elementu pendienteak dituzu jabetza intelektual-erremintan.
+notification.tool.link.missing=Mesedez, jarri harremanetan sistemaren administratzailearekin, elementu horien egoera azaltzeko.
+notification.tool.link=Bisitatu <a href="{0}" target="_blank">zure laneko area</a> egoera deklaratzeko.
 
-#EMAIL NOTIFICATIONS
-ip.notification.mail.subject=Elementu pendienteak dituzu jabetza intelektual-erremintan.
-ip.notification.mail.content=Bere lan-eremua bisita dezan eta elementu horien jabetza intelektualaren egoera deklara dezan, artxiboak ezkutu egon daitezke gero {0} ordu.
-ip.support.mail.subject=Jabetza intelektual-kontsulta berria {0}
-ip.support.mail.content=Jabetza intelektual-kontsulta berria du {0} ({1}), kontsultaren xehetasunak: \n\n<ul><li>Lekua: {2} </li><li>Artxiboko titulua: {3}</li><li>Artxiboko URL-a: {4}</li></ul>\n\ngaldera:\n\n -------------- \n\n{5}\n\n -------------- \n\na mesedea, ez diezaion mezu honi erantzun zuzenki.
+#Support notifications
+support.mail.content=Jabetza intelektual-kontsulta berria du {0} ({1}), kontsultaren xehetasunak: \n\n<ul><li>Lekua: {2} </li><li>Artxiboko titulua: {3}</li><li>Artxiboko URL-a: {4}</li></ul>\n\ngaldera:\n\n -------------- \n\n{5}\n\n -------------- \n\na mesedea, ez diezaion mezu honi erantzun zuzenki.
+support.mail.subject=Jabetza intelektual-kontsulta berria {0}
+
